fixed overflow on hidden row

--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -590,6 +590,7 @@ h1, h2, h3, h4, h5, h6, a, div {
     top: 140px;
     left: 12px;
     width: 90%;
+    z-index: 10;
    
 }
 
@@ -892,7 +893,7 @@ h1, h2, h3, h4, h5, h6, a, div {
     width: 35%;
     overflow-y: hidden;
     height: 100%;
-    position: relative;
+    
     background-color: #000000;
    
 }
